fixed archive/node loading via url; refs #25547